# automation

./: .dockerignore  .enable_self_editing.py.swp  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  bootstrap_ai_brain.py  bootstrap_master_ai_vnext.sh  chat_client.sh  collect_master_ai_report.sh  creds.txt  executor.py  gmail_api_oauth_setup.py  gmail_api_test.py  gmail_service.py  gmail_test.py  handler.py  install_master_ai_upgrades.sh  main.py  master_ai.py  model_selector.py  pip_version.txt  planner.py  project_tree.txt  pyproject.toml  requirements-dev.txt  requirements.txt  resp.json  response.json  secret.vault.gpg  self_patch.sh  self_update.py  start_ai.sh  start_gui.sh  streamlit_chat.py  studio.b64  test_gmail_login.py  test_gpt.py  test_scrape.py  (+5 more)
ai_helpers/: ai_utils.py  chunk_and_process.py  email_notifier.py  handle_mail.py  hello.sh  master_ai_config.py  run_goal.py  write_helper.py
attic/: Watchdog.py  ai-agent.py  ai_agent.py  chat_interface.py  cred_orchestrator.py  gui_app.py  hello_world.py  project_manager.py  test_model_selector.py
aws/: THIRD_PARTY_LICENSES
chat_history/: 20250807_162950.json  20250807_163228.json  20250807_173422.json  20250807_173636.json  20250807_185623.json
config/: config.yaml
creds/: token.pickle
global_memory/: skills.json
logs/: last_command.txt
master_ai/: __init__.py  __main__.py  demo_mod.py  dummy.py
master_ai.egg-info/: SOURCES.txt  top_level.txt
modules/: browsing.py  install_and_import.py  self_edit.py
plans/: plan_1754515148.txt  plan_1754515516.txt  plan_1754515550.txt  (+16 more)
(+128 files in other folders)
